# python-basic-2020-11-il

./: README.md
hw1/: main.py
hw2/: main.py
hw2/exceptions/: __init__.py  alreadystarted.py  enginenotstarted.py  nofuel.py
hw2/helpers/: __init__.py  logger.py
hw2/vehicles/: __init__.py  boat.py  car.py  carriage.py  engine.py  mixinengine.py  vehicle.py  wherry.py
hw3/: alembic.ini  main.py  requirements.txt
hw3/alembic/: env.py
hw3/alembic/versions/: 00563a53170b_new.py
hw45/: app.py
hw45/views/: flats.py
hw6/: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
hw6/migrations/versions/: f34240fb2f0f_.py
hw6/models/: flats.py
hw6/templates/flats/: add.html  details.html
hw6/views/: flats.py
