[tool.poetry]
name = "hw6"
version = "0.1.0"
description = "A flask application demo with DB"
authors = ["Ivan Lysogor <ilysogor@gmail.com>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.8"
Jinja2 = "^2.11.3"
Flask = "^1.1.2"
pydantic = "^1.7.3"
Flask-SQLAlchemy = "^2.4.4"
psycopg2 = "^2.8.6"
Flask-Migrate = "^2.7.0"
Flask-Script = "^2.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
